--- a/index-complex.html
+++ b/index-complex.html
@@ -49,14 +49,16 @@
             <h4>to (breathe)</h4>
             <p>Project description that is probably just the tagline from the exhibition. Short and pithy!</p>
             </span>
-        </div>    
+        <div class="coverup"></div>   
         <div class="work-links">
           <a href="http://www.google.com/" target="_blank">Website</a>
           <a href="http://www.google.com/" target="_blank">Book</a>
         </div>
+        </div> 
       </div><!-- End Student --->
       
-      <div class="student">
+     <!--
+ <div class="student">
         <div class="overlay">
           <div class="image">
             <img class="hovered" src="img/sample_exh.jpg">
@@ -288,6 +290,7 @@
         </div>
       </div><!-- End Student --->
 
+-->
     <footer id="footer">
       Copyright <br/>
       Link to GDMFA Site <br/>
