--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
 <div id="container">
 
   <nav id="gdmfa-bar">
-    <a href="#" target="_blank">Link to other years</a>
+    <a href="#" target="_blank">View previous graduate theses:</a>
+    <a href="#" target="_blank">2013</a>
+    <a href="#" target="_blank">2012</a>
+    <a href="#" target="_blank">2011</a>
+    <a href="#" target="_blank">2010</a>
+    <a href="#" target="_blank">2009</a>
+    <a href="#" target="_blank">2008</a>
+    <a href="#" target="_blank">2007</a>
+    <a href="#" target="_blank">2006</a>
+    <a href="#" target="_blank">2005</a>
   </nav>
 
   <div id="page">
@@ -43,7 +52,7 @@
         <div class="student-container">
           <div class="image">
             <img class="hovered" src="img/sample_exh.jpg">
-            <img class="normal" src="img/sample.gif" style="left:50%; margin-left:-300px;">
+            <img class="normal" src="img/sample_03.gif" style="left:50%; margin-left:-300px;">
             </div>
           <div class="normal"><h4>Amy Lee Walton</h4></div>
           <div class="hovered">
@@ -62,7 +71,7 @@
         <div class="student-container">
           <div class="image">
             <img class="hovered" src="img/sample_exh.jpg">
-            <img class="normal" src="img/sample_03.gif" style="left:50%; margin-left:-300px;">
+            <img class="normal" src="img/sample.gif" style="left:50%; margin-left:-300px;">
             </div>
           <div class="normal"><h4>Ben Chemelski</h4></div>
           <div class="hovered">
@@ -318,8 +327,6 @@
       
     <footer id="footer">
       Copyright <br/>
-      <a href="#" target="_blank">Link to GDMFA Site</a> <br/>
-      <a href="#" target="_blank">Logo: Link to MICA Site</a> <br/>
     </footer>
       
     </div><!-- End Students --->
