--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div id="container" class="container">
 
     <div id="header" class="four columns">
-      <h1>GDMFA 2014 4eva</h1>
+      <h1>We are graphic design.</h1>
     <!--<p>The Graphic Design MFA Program at the Maryland Institute College of Art is proud to present fourteen fresh thesis projects. From posters to installations, letterpress to Javascript, and Vietnam to outer space, these projects represent the wide range of Graphic Design today.</p>
       <p>The exhibition runs from March 28 to April 06, 2014 at the Riggs and Leidy Galleries in MICA's newly renovated Studio Center. Please join us for the opening reception from 5–8 pm on Friday the 28th.</p>-->
       <p>In the Graphic Design department at the Maryland Institute College of Art, Masters Theses are produced by fourteen separate, yet equally important students. These are their theses.</p>
