--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
    
         <div class="student four columns no-margin-left">  
           <figure>
-            <img src="img/sara2.jpg" alt="img06">
+            <img src="img/sarah2.jpg" alt="img06">
             <figcaption>
-              <h3>Facet</h3>
-              <span>A line of bags, totes, and purses distinguished by origami-inspired shapes. </span>
+              <h3>Yalda Night</h3>
+              <span>Typography illuminates the word and gives poetry body. </span>
               <a href="#">Website</a>
               <a href="#">Book</a>
             </figcaption>
@@ -235,8 +235,8 @@
           <figure>
             <img src="img/ricky2.jpg" alt="img06">
             <figcaption>
-              <h3>Facet</h3>
-              <span>A line of bags, totes, and purses distinguished by origami-inspired shapes. </span>
+              <h3>Twinning</h3>
+              <span>A visual exploration of design through the lens of twins.</span>
               <a href="#">Website</a>
               <a href="#">Book</a>
             </figcaption>
