jackie, whaddya think??

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="student four columns no-margin-left">
         <figure>
             <img src="img/ben2.jpg" alt="img02">
-            <figcaption class="one">
+            <figcaption class="two">
               <div class="hover-caption">
                 <h3>(solar system)</h3>
                 <span>Designing systems based on planetary data and spatial relationships.</span>
@@ -79,7 +79,7 @@
         <div class="student four columns no-margin-left">
           <figure>
             <img src="img/dave2.jpg" alt="img04">
-            <figcaption class="two">
+            <figcaption class="one">
               <div class="hover-caption">
                 <h3>Bombs to Blessings</h3>
                 <span>Designing my parents' refugee story. </span>
@@ -94,7 +94,7 @@
         <div class="student four columns no-margin-left">
           <figure>
             <img src="img/gaby2.jpg" alt="img03">
-            <figcaption class="three">
+            <figcaption class="two">
               <div class="hover-caption">
                 <h3>The Music Room</h3>
                 <span>An online store for music education resources.</span>
@@ -109,7 +109,7 @@
         <div class="student four columns no-margin-left">
           <figure>
             <img src="img/emma2.jpg" alt="img05">
-            <figcaption class="two">
+            <figcaption class="one">
               <div class="hover-caption">
                 <h3>White as snow.</h3>
                 <span>An experiment in digital narrative.</span>
@@ -213,10 +213,10 @@
           <h4>Kirby Matherne</h4>
         </div>
    
-        <div class="student four columns no-margin-left">  
+        <div class="student four columns no-margin-left three">  
           <figure>
             <img src="img/yingxi2.jpg" alt="img06">
-            <figcaption class="three">
+            <figcaption>
               <div class="hover-caption">
               <h3>Facet</h3>
               <span>A line of bags, totes, and purses distinguished by origami-inspired shapes. </span>
