--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="initial-scale=1.0, user-scalable=0, maximum-scale=1, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="description" content="Thesis Documentation for the Maryland Institute College of Art Masters in Graphic Design, Class of 2014" />
+<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <meta name="author" content="Jackie Littman and Emma Sherwood-Forbes" />
 <title>GDMFA 2014</title>
 
