ben complained that his title was wrong, jerk.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <img src="img/ben.gif" alt="img02">
             <figcaption class="one">
               <div class="hover-caption">
-                <h3>(solar system)</h3>
+                <h3>solar (system)</h3>
                 <p>Designing systems based on planetary data and spatial relationships.</p>
                 <a href="bchemelski/">Website</a>
                 <a href="#" class="button02">Book</a>
