--- a/dlam/index.html
+++ b/dlam/index.html
@@ -7,8 +7,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?492630344"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?528281157"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4148587461" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?512928871"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3904307994" id="pagesheet"/>
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?4168619138"/>
   <![endif]-->
@@ -45,24 +45,26 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </div>
     </div>
-    <ul class="MenuBar clearfix se_invi" id="menuu1590"><!-- row -->
-     <li class="MenuItemContainer clearfix grpelem" id="u1605"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1606" href="index.html#home"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1609-4"><!-- content --><p>Home</p></div></a>
-     </li>
-     <li class="MenuItemContainer clearfix grpelem" id="u1591"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1592" href="index.html#essay"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1595-4"><!-- content --><p>Essay</p></div></a>
-     </li>
-     <li class="MenuItemContainer clearfix grpelem" id="u1612"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1615" href="index.html#posters"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1617-4"><!-- content --><p>Posters</p></div></a>
-     </li>
-     <li class="MenuItemContainer clearfix grpelem" id="u1635"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1636" href="index.html#film"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1639-4"><!-- content --><p>Film</p></div></a>
-     </li>
-     <li class="MenuItemContainer clearfix grpelem" id="u1598"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1599" href="index.html#exhibition"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1600-4"><!-- content --><p>Exhibition</p></div></a>
-     </li>
-    </ul>
-    <div class="browser_width se_invi" id="u1589"><!-- simple frame --></div>
+    <div class="clearfix colelem" id="pu1649"><!-- group -->
+     <div class="browser_width se_invi" id="u1649"><!-- simple frame --></div>
+     <ul class="MenuBar clearfix se_invi" id="menuu1650"><!-- row -->
+      <li class="MenuItemContainer clearfix grpelem" id="u1672"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1673" href="index.html#home"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1676-4"><!-- content --><p>Home</p></div></a>
+      </li>
+      <li class="MenuItemContainer clearfix grpelem" id="u1695"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1696" href="index.html#essay"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1698-4"><!-- content --><p>Essay</p></div></a>
+      </li>
+      <li class="MenuItemContainer clearfix grpelem" id="u1665"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1668" href="index.html#posters"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1670-4"><!-- content --><p>Posters</p></div></a>
+      </li>
+      <li class="MenuItemContainer clearfix grpelem" id="u1658"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1659" href="index.html#film"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1661-4"><!-- content --><p>Film</p></div></a>
+      </li>
+      <li class="MenuItemContainer clearfix grpelem" id="u1651"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing clearfix colelem" id="u1652" href="index.html#exhibition"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1654-4"><!-- content --><p>Exhibition</p></div></a>
+      </li>
+     </ul>
+    </div>
     <a class="anchor_item colelem" id="essay"></a>
     <div class="clearfix colelem" id="u856-7"><!-- content -->
      <p>For my thesis, I unearthed a story I had never heard in detail or truly understood. I was afraid to ask questions until now. My thesis is the personal story of my parents’ courageous journey of escaping Vietnam and enduring a multitude of obstacles. Over a five day period, my parents’ traveled on seven different vessels in the South China Sea before reaching an island called Pulau Bidong, off the coast of Malaysia. They lived in Malaysia as refugees for one year before settling in America.</p>
@@ -333,8 +335,8 @@ var __adobewebfontsappname__ = "muse";
 </script>
   <script src="scripts/museutils.js?3885830161" type="text/javascript"></script>
   <script src="scripts/jquery.tobrowserwidth.js?4262060562" type="text/javascript"></script>
-  <script src="scripts/jquery.musemenu.js?32367222" type="text/javascript"></script>
   <script src="scripts/jquery.scrolleffects.js?496362122" type="text/javascript"></script>
+  <script src="scripts/jquery.musemenu.js?32367222" type="text/javascript"></script>
   <script src="scripts/webpro.js?4369767" type="text/javascript"></script>
   <script src="scripts/musewpslideshow.js?83045620" type="text/javascript"></script>
   <script src="scripts/jquery.museoverlay.js?3925244142" type="text/javascript"></script>
@@ -346,9 +348,9 @@ var __adobewebfontsappname__ = "muse";
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 $('.browser_width').toBrowserWidth();/* browser width elements */
 Muse.Utils.prepHyperlinks(true);/* body */
+$('#u1649').registerPositionScrollEffect({"enterSpeedY":1,"exitSpeedY":0,"offset":403.95000000000033});/* scroll effect */
 Muse.Utils.initWidget('.MenuBar', function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
-$('#menuu1590').registerPositionScrollEffect({"speedX":0,"enterSpeedY":1,"exitSpeedY":0,"offset":429.2999999999999});/* scroll effect */
-$('#u1589').registerPositionScrollEffect({"enterSpeedY":1,"exitSpeedY":0,"offset":429.2999999999999});/* scroll effect */
+$('#menuu1650').registerPositionScrollEffect({"speedX":0,"enterSpeedY":1,"exitSpeedY":0,"offset":403.95000000000016});/* scroll effect */
 Muse.Utils.initWidget('#slideshowu909', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true}); });/* #slideshowu909 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
