--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <div class="hover-caption">
                 <h3>Bombs to Blessings</h3>
                 <p>Designing my parents' refugee story. </p>
-                <a href="http://emmasf.github.io/GDMFA/dlam/">Website</a>
+                <a href="http://emmasf.github.io/GDMFA/dlam/" target="_blank">Website</a>
                 <a href="#" class="button02">Book</a>
               </div>
             </figcaption>
