--- a/dlam/index.html
+++ b/dlam/index.html
@@ -229,19 +229,19 @@ var __adobewebfontsappname__ = "muse";
         <img class="block" id="u1140_img" src="images/img_1272.jpg" alt="" width="916" height="611"/>
        </div>
        <div class="colelem" id="u1578"><!-- image -->
-        <img class="block" id="u1578_img" src="images/_mg_6448-u1578.jpg" alt="" width="916" height="611"/>
+        <img class="block" id="u1578_img" src="images/img_6448-u1578.jpg" alt="" width="916" height="611"/>
        </div>
        <div class="colelem" id="u1132"><!-- image -->
         <img class="block" id="u1132_img" src="images/img_1275.jpg" alt="" width="916" height="651"/>
        </div>
        <div class="colelem" id="u1138"><!-- image -->
-        <img class="block" id="u1138_img" src="images/_mg_6439-u1138.jpg" alt="" width="916" height="611"/>
+        <img class="block" id="u1138_img" src="images/img_6439-u1138.jpg" alt="" width="916" height="611"/>
        </div>
        <div class="colelem" id="u1552"><!-- image -->
-        <img class="block" id="u1552_img" src="images/_mg_6457-u1552.jpg" alt="" width="920" height="613"/>
+        <img class="block" id="u1552_img" src="images/img_6457-u1552.jpg" alt="" width="920" height="613"/>
        </div>
        <div class="colelem" id="u1557"><!-- image -->
-        <img class="block" id="u1557_img" src="images/_mg_6524.jpg" alt="" width="916" height="611"/>
+        <img class="block" id="u1557_img" src="images/img_6524.jpg" alt="" width="916" height="611"/>
        </div>
        <div class="colelem" id="u1134"><!-- image -->
         <img class="block" id="u1134_img" src="images/img_6231.jpg" alt="" width="916" height="611"/>
