--- a/esherwoodforbes/process-old.html
+++ b/esherwoodforbes/process-old.html
@@ -12,6 +12,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<link rel="stylesheet" href="js/vendor/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="styles/main.css">
 
 	<!--[if lt IE 9]>
@@ -28,39 +29,79 @@
 <body>
 
 <div id="gdmfa">
-  <p>&#8592; <a href="../index.html" target="_blank">GDMFA 2014</a></p>
+  <p>&#8592; <a href="#" target="_blank">GDMFA 2014</a></p>
 </div>
 
 <div class="container">
 
-<nav id="navtwo" class="sixteen columns">
-		<ul class="nav nav-tabs">
+<nav id="navtwo" class="sixteen columns clearfix">
+	<ul class="nav nav-tabs">
     <li><a href="index.html">Intro</a></li>
-    <li class="active"><a href="app.html">Outcome</a></li>
-    <li><a href="process.html">Process</a></li>
+    <li><a href="app.html">Outcome</a></li>
+    <li class="active"><a href="process.html">Process</a></li>
     <li><a href="exhibition.html">Exhibition</a></li>
     <li><a href="thanks.html">Colophon</a></li>
-        <li class="launcher"><button><a href="viewer.html" target="_blank" >View the App</a></button></li>
+    <li class="launcher"><button><a href="viewer.html" target="_blank" >View the App</a></button></li>
   </ul>
 </nav>
-
-	<div id="page">	
-		<div class="twelve columns">
-			<h1>White as snow.</h1>
-			<h3>An experiment in digital narrative.</h3>
-                <p><i>White as Snow</i> is an interactive book for adults. Historical context, sociological analysis, and visual surprise mix with more traditional text-based narrative to shed light on the Grimm's classic tale. The project is an exploration of new possibilities for editorial content in the digital world. Rather than say more, I'll let you see for yourself:</p>
-        <button class="big"><a href="viewer.html" target="_blank" >View the App</a></button>
-		</div>
-		<div class="three columns">
-		</div>
-	</div>
+	
+		<div id="page">
+		
+		<div id="sidebar" class="four columns">
+		  <h2>On outcomes and intentions.</h2>
+		  <p>Looking backwards, I can see that my thesis project followed the classic narrative arc: triumph only after a whole pile of struggle. 
+		  </p>
+		  <div id="subnav">
+  		<h4><a class="active" href="#exposition">Exposition</a></h4>
+  		<h4><a href="#catalyst">Catalyst</a></h4>
+      <h4><a href="#conflict">Conflict</a></h4>
+      <h4><a href="#climax">Climax</a></h4>
+      <h4><a href="#resolution">Resolution</a></h4>
+      </div>
+		</div>	
+		
+		<div class="nine columns " id="essay">
+          <p class="voice-one"><a name="exposition" id="exposition" class="waypoint" ></a><i>White as snow</i> is an experiment in digital narrative. This interactive story for adults mixes historical context, sociological analysis, and visual surprise with more traditional text-based narrative to shed light on the Grimms’ classic tale. Reading <i>White as snow</i> is an act of uncovering and creating, a new means of exercising the imagination.</p>
+<p class="voice-two">Sounds like a tidy little package, right? It didn’t start that way. In fact, I began with only a foggy idea of what I wanted to create. Instead of putting a pretty bow on the project and talking about it in hindsight, I want to tell you about the experience of making it. This story is not unique; it is a classic narrative arc, the struggle of a creative person trying to balance meaning and form.</p>
+<p class="voice-two">I spent a year thinking about Snow White, but I designed and developed <i>White as snow</i> in a fraction of that time. Before my ideas popped out on screen, they tumbled around in my brain for what seemed like an eternity. Before I felt accomplished, I felt lost; before I had a breakthrough, I had a lot of failures.</p>
+<p class="voice-one">We all grew up reading stories. If not reading, then listening; if not listening, then watching. Humans like a good narrative. Stories allow us to escape, to live other lives for a moment. We imagine who we might be in another world or who we might become in this one.</p>
+<p class="voice-two">You would probably believe me if I said <i>White as snow</i> was inspired by my childhood. I could tell you about how I grew up reading fairy tales, lost in an imaginary world. About how by 4th grade I had read every book in my elementary school, and how the librarian began to bring me adult books from her personal collection. These things are true, but they were not at the front of my mind when I embarked upon this project. I chose Snow White only as a platform from which I could embark upon design experimentation.
+<p class="voice-two"><a name="catalyst" id="catalyst" class="waypoint" ></a><i>White as snow</i> was created as the culminating project of the Master of Fine Art in Graphic Design at the Maryland Institute College of Art. Rather than trying to create a masterpiece during my thesis year, I began with a very personal goal. I wanted to find a new way to design and expose myself to a yet-unknown part of the discipline. </p>
+<p class="voice-two">I decided to push myself to think through making, to create unfiltered imagery through exploration, and to free myself from the burden of analysis. I saw my peers use this method to produce striking work, and I worried that my practice suffered from a certain pragmatism and predictability. With an academic background in philosophy and much of my design career spent creating corporate websites and applications, I feared that my skills were all devoted to function and none to form. I was tired of using design as a way to pay rent; I wanted to find a focus that truly engaged me. I decided that the thesis year would be the ideal time to step out of my comfort zone and see what else was out there.</p>
+<p class="voice-one">This imagining, this placing of oneself in a story, is particularly easy with fairy tales. The recorded telling of these stories are often plain, forcing us to fill in the details. Take Snow White: she is described only as beautiful and young, with red lips, white skin, and black hair. Is she tall or short, thin or curvy? Is she smart, talkative, stubborn, athletic, kind, jealous, lazy, funny, or mean? We have to imagine for ourselves.</p>
+<p class="voice-two">I set up parameters that would force me to branch out. I decided to focus on narrative content and use design to tell a story rather than sole a problem. I chose Snow White, a story familiar enough to be recognizable but not so well known to be boring or repetitive. I mined the story for visual content, listing colors, objects, characters: anything I could find that might give birth to imagery.</p>
+<p class="voice-two">And so it began: experimentation with no outcome in mind. My only goal was to make anything and everything I could and to do so through intuitive making, not analysis. I made 100 representations of the apple. I marbleized stills from the 1938 Disney film. I created icon sets to represent important scenes, gradients to evoke these scenes, and spoof iPhone apps that a modern-day Queen could use to calculate her beauty. I painted. I drew. I took pictures. I made vector illustrations. I collaged.</p>
+<p class="voice-two"><a name="conflict" id="conflict" class="waypoint"></a>Some of this work is beautiful and some conveys the story in an interesting way, but to me it all felt empty. Without knowing what I was trying to communicate and why, I had no value system on which to decide if my attempts were successful. I quickly ran out of ideas. To find more fuel for the fire, I broadened my research past the tale itself and into its history and cultural meaning.
+<p class="voice-one">The Grimm brothers thought the stories they recorded represented German identity. It’s an odd set of values to hold dear: vanity, narcissism, cruelty, and revenge.</p>
+<p class="voice-two">I was excited by what I found. And when I spoke about the story, my peers and mentors were excited too. They were intrigued by the Grimm brothers, surprised by the parallels I found between Snow White and Jesus, and in love with the cheeky psychoanalysis that came to me much more easily than imagery. </p>
+<p class="voice-two">My ideas were good, but they didn’t translate; my making still felt flat. I failed to create imagery motivated by the research. In one hand I had piles of visual work and in the other I had writing, but I could not fit them together.</p>
+<p class="voice-two">I almost gave up. I cursed myself for trying to develop a new method so far from my comfort zone. I fell fully into analytical mode. I stopped painting apples and started making spreadsheets. I took a detour into design-about-design and tried to make Snow White into an allegory for the process of user experience design, content I felt much more comfortable with. But here, too, the separation of research and visuals proved to be just as troublesome. My meta-project flopped.</p>
+<p class="voice-one">Why is it that so many people in so many places find this story to be interesting? This is the same as asking why there are archetypes. Beauty and youth, female sexuality, tension between mothers and daughters: these issues run deep. We love to identify with others and to imagine our lives as others’ lives.</p>
+<p class="voice-two">Process is personal. There is no one right way. On the first day of grad school, I attended a workshop led by Paul Sahre and Jan Wilker. Sahre was asked if he reads the book before designing its cover. “You must,” he said.</p>
+<p class="voice-two">Jan Wilker laughed, and encouraged him to shed the burden of context. Wilker described his process as throwing things at a wall, making hundreds of images without evaluating them, and then sifting through. Both men are great designers; what works for one person will not work for another. I am not Jan Wilker.</p>
+<p class="voice-two"><a name="climax" id="climax" class="waypoint" ></a>I didn’t give up. Instead, I stopped killing ideas in my mind before I saw them through. I turned a more analytical eye towards what I’d made instead of engaging in a strange, unthinking formalist evaluation. I realized that in trying to shut down my search for meaning, I was left with no ground on which to move forward into the next step. </p>
+<p class="voice-two">When I stopped trying so hard to be a blank slate, I saw that the pieces I had created could turn into a great project. If my research was so interesting, why not use it as content? Rather than retelling events with research-inspired imagery, I could reveal my ideas and the interesting new information I found. This would allow readers to reshape the story for themselves.</p>
+<p class="voice-one">Snow White is an empty shell. The Queen is a classic narcissist. The King is absent. The Prince likes an easy target.  We all sin.</p>
+<p class="voice-two">Once I found a meaningful place for research and ideas, everything clicked. The visual language began to flow and actually contribute something interesting to the piece. Elements from my earlier explorations bubbled up again, but now they made sense. I quickly put laid out a few pages using Helvetica Neue, fashion-magazine cutouts, and strips of color.</p> 
+<p class="voice-two">For once, the elements connected to the tale. If a fairy tale is meant to be empty, what better typeface than Helvetica? The story centers on beauty and youth, and fashion magazines deal in the same values. Even the decision to make the book interactive made sense: the iPad is like a fairy tale in its seductive emptiness, ready to be filled with our own context and content. iPads may seem to foretell the death of print, but like Snow White in her coffin (and film photography in the real world), print may enjoy a more beautiful rebirth once all the boring content is moved on screen. I could go on.</p>
+<p class="voice-one">Snow White for today’s audience is a tale of history and psychoanalysis. We want to know who people really are and where they come from. We are unsatisfied with the surface; we want to dig deeper.</p>
+<p class="voice-two"><a name="resolution" id="resolution" class="waypoint" ></a>In some ways, this is all post-rationalization. These ideas were not explicit in my early making. But perhaps I subconsciously made choices that expressed these parallels, for I found I had made meaningful visual content without first planning this meaning. I’ll always read the book before designing its cover, but I now know how to use uncritical making as a first step.</p>
+<p class="voice-two">I recently asked many of my classmates to describe what they learned in graduate school. Their responses focused on one thing: the discovery of their productive, creative self. “I figured out how to get past the blank page,” “I learned how to work with people,” “I discovered how I can function as a creative person,”  and “I learned to trust my intuition.” More than any portfolio piece or concrete skill, my peers valued the truths about themselves, truths revealed by constant hard work across many projects, by failures as much as successes.</p>
+<p class="voice-two"><i>White as snow</i> is a marriage of showing and telling, of research and visual design. I didn’t begin the project with this goal in mind; it arose from my successes and failures along the way. I saw the thesis project as more of an opportunity for creative growth than the moment to create a masterpiece, and in doing so I took risks. I gave myself the challenge of discovering something I couldn’t imagine before I began, and I succeeded. Along the way, I learned to trust the process.</p>
+        </div>
+		
+				<div class="three columns thumbnails">        
+      <a class="fancybox gallery" rel="gallery" title="Sample title 1" href="img/apples_round.jpg"><img src="img/apples_round.jpg" alt="" /></a>
+      <a class="fancybox gallery" rel="gallery" title="Sample title 2" href="img/emotionaldwarves.jpg"><img src="img/emotionaldwarves.jpg" alt="" /></a>
+      <a class="fancybox gallery" rel="gallery" title="Sample title 3" href="img/grad_tempt02.jpg"><img src="img/grad_tempt02.jpg" alt="" /></a>
+      <a class="fancybox gallery" rel="gallery" title="Sample title 4" href="img/marbled-04.jpg"><img src="img/marbled-04.jpg" alt="" /></a>
+      <a class="fancybox gallery" rel="gallery" title="Sample title 5" href="img/status_01.jpg"><img src="img/status_01.jpg" alt="" /></a>
+		</div>	
 		
 <footer class="sixteen columns clearfix">
 	<p class="footer left eight columns alpha">
 	&copy; 2014 Emma Sherwood-Forbes, All Rights Reserved. <br/>
-	Interested? <a href="mailto:emma@sherwoodandforbes.com" target="_blank">Get in touch</a> or view <a href="http://www.sherwoodandforbes.com" target="_blank">more of my work</a>.
-		 
-	</p>
+	Interested? <a href="mailto:emma@sherwoodandforbes.com" target="_blank">Get in touch</a> or view <a href="http://www.sherwoodandforbes.com" target="_blank">more of my work</a>. </p>
 	<p class="footer right eight columns omega">
 		<a href="https://twitter.com/sherwoodforbes" target="_blank" class="tooltip"><svg version="1.1" xml:space="preserve" id="twitter">
       <path d="M33,17.403c-0.531,0.605-1.186,1.007-1.963,1.205c-0.346,0.049-0.686,0.099-1.02,0.147
@@ -183,6 +224,7 @@
 		</p>
   </footer>
 
+	</div><!-- page-->
 	</div><!-- container -->
 
 
@@ -190,6 +232,7 @@
 <!-- Begin Javascript ----------------------------------------------->
 <!------------------------------------------------------------------->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/vendor/waypoints.min.js"></script>
 
 <script>  
     $(window).scroll(function(){
@@ -197,9 +240,52 @@
           $('#navtwo').addClass('fixed');
       } else {
           $('#navtwo').removeClass('fixed');
+      };
+      if ($(this).scrollTop() > 187) {
+          $('#subnav').addClass('fixed');
+      } else {
+          $('#subnav').removeClass('fixed');
       }
   });
 </script>
 
+
+
+<!-- Waypoint -->
+<script>
+  $('.waypoint').waypoint(function(direction) {   
+    $('#subnav').find("a").removeClass("active");
+    $('#subnav').find("a[href='#" + this.id + "']").addClass("active");
+    
+  },{ offset: 81 });
+</script>
+
+
+<!-- Smooth Scrolling -->
+<script src="js/vendor/jquery.localscroll.js" type="text/javascript"></script> 
+<script src="js/vendor/jquery.scrollTo.js" type="text/javascript"></script> 
+<script type="text/javascript">
+  $(document).ready(function() {
+     $('#subnav').localScroll({duration:600});
+  });
+</script>
+
+
+<!-- Lightbox ---------------------------------------->
+<!-- Add mousewheel plugin (this is optional) -->
+<script type="text/javascript" src="js/vendor/fancybox/jquery.mousewheel-3.0.6.pack.js"></script>
+
+<!-- Add fancyBox -->
+<script type="text/javascript" src="js/vendor/fancybox/jquery.fancybox.js"></script>
+<script type="text/javascript">
+	$(document).ready(function() {
+    $(".fancybox.gallery").attr('rel', 'gallery').fancybox({
+        padding     : 0,
+        });
+  });
+</script>
+
+<!-- Livereload preview, axe before going live -->
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
