kirbys new files

--- a/kmatherne/index.html
+++ b/kmatherne/index.html
@@ -1,1 +1,60 @@
-Kirby's page goes here
+<!doctype html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Kirby Matherne - Sorts</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+
+<style>
+	html, body { margin: 0; padding: 0; }
+	.container { width: 100%; }
+	.center {
+		display: block;
+		margin: 0 auto 0 auto;
+		position: relative;
+	}
+</style>
+</head>
+
+<body>
+
+
+<!-- Top bar linking back to all theses -->
+<div id="gdmfa">
+  <p>&#8592; <a href="../index.html" target="_blank">GDMFA 2014</a></p>
+</div>
+
+<div id="gdmfa">
+  <p>&#8592; <a href="http://kirbymatherne.com" target="_blank">KirbyMatherne.com</a></p>
+</div>
+
+
+
+<div class="container">
+    <img class="center" src="images/SORTS_TITLE.gif" />
+    <video class="center" id="sorts_process" src="images/sorts_process_new.mov" controls></video>
+    <img class="center" src="images/padding.jpg" />
+	<img class="center" src="images/gallerytalkphoto_forweb.jpg" />
+	<img class="center" src="images/posters_web.jpg" />
+	<img class="center" src="images/hands_final_forweb.jpg" />
+	<img class="center" src="images/what_would_happen.gif" />
+	<img class="center" src="images/if_every_letter.gif" />
+	<img class="center" src="images/was_made_with.gif" />
+	<img class="center" src="images/other_letters.gif" />
+	<img class="center" src="images/with_some_logic.gif" />
+	<img class="center" src="images/it_just_might_work.gif" />
+	<img class="center" src="images/or_look_ugly.gif" />
+	<img class="center" src="images/you_decide.gif" />
+	
+	
+    <a class="sorts" href="https://www.dropbox.com/s/9ktrcv06u97gu3m/Sorts.otf" target="_blank">Download Sorts Here</a>
+      <img class="center" src="images/padding.jpg" />
+
+
+
+</div>
+
+</div>
+
+</body>
+</html>
