fixed rob's name

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             </figcaption>
           </figure>
-          <h4>Rob McConell</h4>
+          <h4>Rob McConnell</h4>
         </div> 
  
         
